--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>我的博客</title>
+</head>
+<body>
+    <p><a href="helloword">helloword</a></p>
+</body>
+</html>
