--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>我的博客</title>
 </head>
 <body>
-    <p><a href="helloword">helloword</a></p>
+    <p><a href="helloword.md">helloword</a></p>
 </body>
 </html>
