--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <h1>这是我的博客</h1>
 </head>
 <body>
+    <p><a href="2024-6-8.md">记一次cs服务器搭建</a></p>
     <p><a href="helloword.md">helloword</a></p>
 </body>
 </html>
